# les29_hw

./: .gitignore  manage.py  pyproject.toml
Data/: ad.csv  ad.json  ads.json  csv_2_json.py  user.json
ads/: admin.py  models.py  serializers.py  views.py
ads/migrations/: 0001_initial.py  0002_rename_author_id_ad_author.py  0003_alter_ad_description.py  0004_alter_ad_description.py
ads/urls/: ad.py  category.py
ads/views/: ad.py  category.py
les27/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_location_lat_alter_location_lng.py
